force-app/main/default/objects/Object_1_css__c/Object_1_css__c.object-meta.xml
<CustomObject>
    <description>Form css stores all the attributes that defines how a form will look like when you view a form. All configuration records are saved in this object from Form Configuration screen.</description>
    <label>Form css</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Object 1 css Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form css</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>