force-app/main/default/objects/Object_1_css__c/fields/Account_Lookup_API__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_API__c</fullName>
    <label>Account Lookup API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>