force-app/main/default/objects/Object_1_css__c/fields/Account_Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_Fields__c</fullName>
    <label>Account Lookup Fields</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>