force-app/main/default/objects/Object_1_css__c/fields/Add_Notes__c.field-meta.xml
<CustomField>
    <fullName>Add_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Notes</label>
    <type>Checkbox</type>
</CustomField>