force-app/main/default/objects/Object_1_css__c/fields/Add_Problem__c.field-meta.xml
<CustomField>
    <fullName>Add_Problem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Problem</label>
    <type>Checkbox</type>
</CustomField>