force-app/main/default/objects/Object_1_css__c/fields/Add_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Add_Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Procedure</label>
    <type>Checkbox</type>
</CustomField>