force-app/main/default/objects/Object_1_css__c/fields/Approv__c.field-meta.xml
<CustomField>
    <fullName>Approv__c</fullName>
    <label>Approver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>