force-app/main/default/objects/Object_1_css__c/fields/Approval_Members_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Members_Name__c</fullName>
    <label>Approval Members Name</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>