force-app/main/default/objects/Object_1_css__c/fields/Approver_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Approver_Custom_Label__c</fullName>
    <label>Approver Custom Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>