force-app/main/default/objects/Object_1_css__c/fields/Approver_List__c.field-meta.xml
<CustomField>
    <fullName>Approver_List__c</fullName>
    <label>Approver List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>