force-app/main/default/objects/Object_1_css__c/fields/Auto_Populate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Populate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Populate</label>
    <type>Checkbox</type>
</CustomField>