force-app/main/default/objects/Object_1_css__c/fields/Auto_text__c.field-meta.xml
<CustomField>
    <fullName>Auto_text__c</fullName>
    <label>Auto text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>