force-app/main/default/objects/Object_1_css__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>