force-app/main/default/objects/Object_1_css__c/fields/Columns_In_Section__c.field-meta.xml
<CustomField>
    <fullName>Columns_In_Section__c</fullName>
    <label>Columns In Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>