force-app/main/default/objects/Object_1_css__c/fields/Columns_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Columns_Matrix__c</fullName>
    <label>Columns Matrix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>