force-app/main/default/objects/Object_1_css__c/fields/Columns_Selected_For_Table__c.field-meta.xml
<CustomField>
    <fullName>Columns_Selected_For_Table__c</fullName>
    <label>Columns Selected For Table</label>
    <length>5</length>
    <type>Text</type>
</CustomField>