force-app/main/default/objects/Object_1_css__c/fields/Consent_Fields_Per_Section_Stringified__c.field-meta.xml
<CustomField>
    <fullName>Consent_Fields_Per_Section_Stringified__c</fullName>
    <label>Consent Fields Per Section (Stringified)</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>