force-app/main/default/objects/Object_1_css__c/fields/Consent_Query__c.field-meta.xml
<CustomField>
    <fullName>Consent_Query__c</fullName>
    <label>Consent Query</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>