force-app/main/default/objects/Object_1_css__c/fields/Css__c.field-meta.xml
<CustomField>
    <fullName>Css__c</fullName>
    <label>Css</label>
    <type>TextArea</type>
</CustomField>