force-app/main/default/objects/Object_1_css__c/fields/Default_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Label__c</fullName>
    <label>Default Field Label</label>
    <type>TextArea</type>
</CustomField>