force-app/main/default/objects/Object_1_css__c/fields/Default_Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Inventory_Type__c</fullName>
    <label>Default Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other 1</fullName>
            </value>
            <value>
                <fullName>Other 2</fullName>
            </value>
            <value>
                <fullName>Injectibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>