force-app/main/default/objects/Object_1_css__c/fields/Default_Label_Filled__c.field-meta.xml
<CustomField>
    <fullName>Default_Label_Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Label Filled</label>
    <type>Checkbox</type>
</CustomField>