force-app/main/default/objects/Object_1_css__c/fields/Default_text__c.field-meta.xml
<CustomField>
    <fullName>Default_text__c</fullName>
    <label>Default text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>