force-app/main/default/objects/Object_1_css__c/fields/Enable_Auto_text__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Auto text</label>
    <type>Checkbox</type>
</CustomField>