force-app/main/default/objects/Object_1_css__c/fields/Field_API_AutoText_Array__c.field-meta.xml
<CustomField>
    <fullName>Field_API_AutoText_Array__c</fullName>
    <label>Field API AutoText Array</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>