force-app/main/default/objects/Object_1_css__c/fields/Field_APIs_For_AutoText__c.field-meta.xml
<CustomField>
    <fullName>Field_APIs_For_AutoText__c</fullName>
    <label>Field APIs For AutoText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>