force-app/main/default/objects/Object_1_css__c/fields/Field_Label_Long__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Long__c</fullName>
    <description>The old field label allowed only 255 chars. This new field label will longer texts to be saved as field label.</description>
    <label>Field Label</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>