force-app/main/default/objects/Object_1_css__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>