force-app/main/default/objects/Object_1_css__c/fields/Form_Category__c.field-meta.xml
<CustomField>
    <fullName>Form_Category__c</fullName>
    <label>Form Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
                <default>true</default>
                <label>Notes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>