force-app/main/default/objects/Object_1_css__c/fields/Form_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Data_Type__c</fullName>
    <label>Form Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Glucose</fullName>
            </value>
            <value>
                <fullName>Vital Sign</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Medication_List</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>