force-app/main/default/objects/Object_1_css__c/fields/Form_Specific_Data__c.field-meta.xml
<CustomField>
    <fullName>Form_Specific_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Specific Data</label>
    <type>Checkbox</type>
</CustomField>