force-app/main/default/objects/Object_1_css__c/fields/Form_Template_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Template_Status__c</fullName>
    <label>Form Template Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>