force-app/main/default/objects/Object_1_css__c/fields/Form_type__c.field-meta.xml
<CustomField>
    <fullName>Form_type__c</fullName>
    <label>Form type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>