force-app/main/default/objects/Object_1_css__c/fields/Formula_Map_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Formula_Map_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formula Map Enabled</label>
    <type>Checkbox</type>
</CustomField>