force-app/main/default/objects/Object_1_css__c/fields/Free_Text_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_SOQL__c</fullName>
    <label>Free Text SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>