force-app/main/default/objects/Object_1_css__c/fields/Headings__c.field-meta.xml
<CustomField>
    <fullName>Headings__c</fullName>
    <label>Headings</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>