force-app/main/default/objects/Object_1_css__c/fields/Hide_Selections__c.field-meta.xml
<CustomField>
    <fullName>Hide_Selections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Selections</label>
    <type>Checkbox</type>
</CustomField>