force-app/main/default/objects/Object_1_css__c/fields/IMG_Default_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>IMG_Default_Button_Label__c</fullName>
    <label>[IMG] Default Button Label</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>