force-app/main/default/objects/Object_1_css__c/fields/IMG_File_Name__c.field-meta.xml
<CustomField>
    <fullName>IMG_File_Name__c</fullName>
    <label>[IMG] File Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>