force-app/main/default/objects/Object_1_css__c/fields/IMG_Type_of_Row__c.field-meta.xml
<CustomField>
    <fullName>IMG_Type_of_Row__c</fullName>
    <label>[IMG] Type of Row</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>