force-app/main/default/objects/Object_1_css__c/fields/Indentation__c.field-meta.xml
<CustomField>
    <fullName>Indentation__c</fullName>
    <label>Indentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heading</fullName>
            </value>
            <value>
                <fullName>Subheading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>