force-app/main/default/objects/Object_1_css__c/fields/Is_Approval_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Record</label>
    <type>Checkbox</type>
</CustomField>