force-app/main/default/objects/Object_1_css__c/fields/Is_Common_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Is_Common_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Common Engaged</label>
    <type>Checkbox</type>
</CustomField>