force-app/main/default/objects/Object_1_css__c/fields/Is_Consent__c.field-meta.xml
<CustomField>
    <fullName>Is_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Consent</label>
    <type>Checkbox</type>
</CustomField>