force-app/main/default/objects/Object_1_css__c/fields/IS_CONSENT_Selected_Object__c.field-meta.xml
<CustomField>
    <fullName>IS_CONSENT_Selected_Object__c</fullName>
    <label>[IS CONSENT] Selected Object</label>
    <type>TextArea</type>
</CustomField>