force-app/main/default/objects/Object_1_css__c/fields/Is_formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_formula_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is formula Field</label>
    <type>Checkbox</type>
</CustomField>