force-app/main/default/objects/Object_1_css__c/fields/Is_Image_Uplaod__c.field-meta.xml
<CustomField>
    <fullName>Is_Image_Uplaod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Image Uplaod</label>
    <type>Checkbox</type>
</CustomField>