force-app/main/default/objects/Object_1_css__c/fields/Is_matrix__c.field-meta.xml
<CustomField>
    <fullName>Is_matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is matrix?</label>
    <type>Checkbox</type>
</CustomField>