force-app/main/default/objects/Object_1_css__c/fields/Is_RecordType_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_RecordType_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RecordType Selected</label>
    <type>Checkbox</type>
</CustomField>