force-app/main/default/objects/Object_1_css__c/fields/Is_Time_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time Enabled</label>
    <type>Checkbox</type>
</CustomField>