force-app/main/default/objects/Object_1_css__c/fields/IsCommon__c.field-meta.xml
<CustomField>
    <fullName>IsCommon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommon</label>
    <type>Checkbox</type>
</CustomField>