force-app/main/default/objects/Object_1_css__c/fields/isFormMacro__c.field-meta.xml
<CustomField>
    <fullName>isFormMacro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFormMacro</label>
    <type>Checkbox</type>
</CustomField>