force-app/main/default/objects/Object_1_css__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lot Number</label>
    <type>Checkbox</type>
</CustomField>