force-app/main/default/objects/Object_1_css__c/fields/Map_field__c.field-meta.xml
<CustomField>
    <fullName>Map_field__c</fullName>
    <label>Map_field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>