force-app/main/default/objects/Object_1_css__c/fields/Map_object__c.field-meta.xml
<CustomField>
    <fullName>Map_object__c</fullName>
    <label>Map_object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>