force-app/main/default/objects/Object_1_css__c/fields/Map_Query__c.field-meta.xml
<CustomField>
    <fullName>Map_Query__c</fullName>
    <label>Map_Query</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>