force-app/main/default/objects/Object_1_css__c/fields/No_Label__c.field-meta.xml
<CustomField>
    <fullName>No_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Label</label>
    <type>Checkbox</type>
</CustomField>