force-app/main/default/objects/Object_1_css__c/fields/Object_1_css__c.field-meta.xml
<CustomField>
    <fullName>Object_1_css__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object 1 css</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Section_Number__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Object_1_css__c</referenceTo>
    <relationshipName>Object_1_css</relationshipName>
    <type>Lookup</type>
</CustomField>