force-app/main/default/objects/Object_1_css__c/fields/Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Object_Fields__c</fullName>
    <label>Formula Object Fields</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>