force-app/main/default/objects/Object_1_css__c/fields/Object_lookup_Api__c.field-meta.xml
<CustomField>
    <fullName>Object_lookup_Api__c</fullName>
    <label>Object lookup Api</label>
    <type>TextArea</type>
</CustomField>