force-app/main/default/objects/Object_1_css__c/fields/Object_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Object_Record_Types__c</fullName>
    <label>Object Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>