force-app/main/default/objects/Object_1_css__c/fields/Parent_Query__c.field-meta.xml
<CustomField>
    <fullName>Parent_Query__c</fullName>
    <label>Parent Query</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>