force-app/main/default/objects/Object_1_css__c/fields/Raw_Map_Query__c.field-meta.xml
<CustomField>
    <fullName>Raw_Map_Query__c</fullName>
    <label>Raw Map Query</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>