force-app/main/default/objects/Object_1_css__c/fields/Reference_to_object__c.field-meta.xml
<CustomField>
    <fullName>Reference_to_object__c</fullName>
    <label>Reference to object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>