force-app/main/default/objects/Object_1_css__c/fields/Section_As_Ext_Cmp__c.field-meta.xml
<CustomField>
    <fullName>Section_As_Ext_Cmp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section As Ext Cmp</label>
    <type>Checkbox</type>
</CustomField>