force-app/main/default/objects/Object_1_css__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <type>TextArea</type>
</CustomField>