force-app/main/default/objects/Object_1_css__c/fields/Section_Name_As_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Section_Name_As_Rich_Text__c</fullName>
    <label>Section Name As Rich Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>