force-app/main/default/objects/Object_1_css__c/fields/Select_Form_Component__c.field-meta.xml
<CustomField>
    <fullName>Select_Form_Component__c</fullName>
    <label>Select Form Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enable Templates For Notes</fullName>
            </value>
            <value>
                <fullName>Enable Consent</fullName>
            </value>
            <value>
                <fullName>Form Specific Data</fullName>
            </value>
            <value>
                <fullName>Enable Problems</fullName>
            </value>
            <value>
                <fullName>Enable Diagnoses</fullName>
            </value>
            <value>
                <fullName>Enable Table</fullName>
            </value>
            <value>
                <fullName>Enable Procedure</fullName>
            </value>
            <value>
                <fullName>Enable Draw And Annotate</fullName>
            </value>
            <value>
                <fullName>Enable Upload And Annotate</fullName>
            </value>
            <value>
                <fullName>Enable Inventory Order</fullName>
            </value>
            <value>
                <fullName>Enable Prescription Order</fullName>
            </value>
            <value>
                <fullName>Enable Modular Table</fullName>
            </value>
            <value>
                <fullName>Enable Notes for Medical Coding</fullName>
            </value>
            <value>
                <fullName>Enable Lab Order</fullName>
            </value>
            <value>
                <fullName>Enable Medications List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>