force-app/main/default/objects/Object_1_css__c/fields/Show_Heading__c.field-meta.xml
<CustomField>
    <fullName>Show_Heading__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Heading</label>
    <type>Checkbox</type>
</CustomField>