force-app/main/default/objects/Object_1_css__c/fields/Static_file_name__c.field-meta.xml
<CustomField>
    <fullName>Static_file_name__c</fullName>
    <label>Static file name</label>
    <type>TextArea</type>
</CustomField>