force-app/main/default/objects/Object_1_css__c/fields/Type_of_Note__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Note__c</fullName>
    <label>Type of Note</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>