force-app/main/default/objects/Object_1_css__c/fields/UploadImage__c.field-meta.xml
<CustomField>
    <fullName>UploadImage__c</fullName>
    <label>UploadImage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>