force-app/main/default/objects/Object_1_css__c/fields/WHERE_clause_per_field__c.field-meta.xml
<CustomField>
    <fullName>WHERE_clause_per_field__c</fullName>
    <label>WHERE clause per field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>