force-app/main/default/objects/Object_1_css__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section_Name__c</columns>
    <columns>Section_Number__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Form__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>