force-app/main/default/objects/Object_1_css__c/listViews/Configuration_List_View.listView-meta.xml
<ListView>
    <fullName>Configuration_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_1_css__c</field>
        <operation>equals</operation>
    </filters>
    <label>Configuration List View</label>
</ListView>